# XMRT-Ecosystem

./: .env.enhanced  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .secret  .trigger  AUTONOMOUS_ELIZA_README.md  AUTONOMOUS_SYSTEM_DEPLOYMENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  DEPLOYMENT_DUAL.md  DEPLOYMENT_INSTRUCTIONS_ENHANCED.md  DEPLOY_TRIGGER.md  DEVELOPMENT.md  Dockerfile  ECOSYSTEM_STRUCTURE_EVALUATION.md  ELIZA_ENHANCEMENT_ARCHITECTURE.md  ELIZA_ENHANCEMENT_PROGRESS.md  ENHANCED_DEPLOYMENT.md  LICENSE  MINER_LEADERBOARD.md  Procfile  README.md  README_SLACK_INTEGRATION.md  RENDER_GEVENT_FIX.md  UNIFIED_ARCHITECTURE.md  activate_enhancements.py  activity_monitor_api.py  advanced_analytics_engine.py  advanced_eliza_orchestrator.py  agent_github_integration.py  agent_webhook_handler.py  agents.md  agents_config.py  ai_tool_framework.py  analysis_summary.md  analytics_system.py  (+83 more)
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml
api/: index.py
app/: .npmrc  __init__.py  config.py  error_handlers.py  health.py  install.sh  package-lock.json  package.json  pnpm-lock.yaml  preinstall.sh  security.py  vercel.json
autonomous_work/: performance_analysis_20250729_194319.json  performance_analysis_20250729_194410.json  performance_analysis_20250729_194458.json  performance_analysis_20250729_194544.json  performance_analysis_20250729_194632.json  performance_analysis_20250729_194737.json  performance_analysis_20250729_194819.json  performance_analysis_20250729_194903.json  (+76 more)
(+489 files in other folders)
