[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmrt-ecosystem"
version = "0.1.0"
description = "Core XMRT ecosystem with AI integration, decentralized governance, and blockchain infrastructure"
authors = [{name = "XMRT Team", email = "dev@xmrt.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
